Update button image in index.html and indexen.html, and fix text alignment in styles.css

--- a/styles.css
+++ b/styles.css
@@ -2580,7 +2580,6 @@ iframe {
         display: flex;
         justify-content: center;
         align-items: center;
-        text-wrap: wrap;
         text-align: left;
     }
 
